Set publish_to to none

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: webrtc_interface
 description: WebRTC Interface for Dart-Web/Flutter.
 version: 1.0.1
 homepage: https://flutter-webrtc.org
+publish_to: none
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
